
2021-01-16 Franz Holzinger <franz@ttproducts.de>
    * bugfix: EXCLUDETABLES must be considered even if TABLES is not set to ALL
    * bugfix in parsing of table name

2021-01-04 Franz Holzinger <franz@ttproducts.de>
    * add support for TYPO3 10.4

2020-12-23 Franz Holzinger <franz@ttproducts.de>
    * enhancement for DoctrineConnection: Catch and rethrow the exception for method executeQuery in order to generate a debug output in the error case.
    * bugfix: output must be made in an error case when not table can be found due to a former exception

2020-11-13 Franz Holzinger <franz@ttproducts.de>
    * restructure the DebugApi call. No database objects should be parameters.
    * DoctrineConnection must use $resultSet->rowCount for UPDATE, DELETE and INSERT SQL queries to get the affected rows.

2020-11-10 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The SQL query logger params must be shown correctly also for UPDATE and INSERT
    * bugfix: The detection of tables out of a SQL query will give better results
    * new feature: Use the install tool configurations with table limits also for the SQL query logger.

2020-09-02 Franz Holzinger <franz@ttproducts.de>
    * bugfix: the SQL query logger params must be checked for the type array.

2020-08-12 Franz Holzinger <franz@ttproducts.de>
    * bugfix for TYPO3 8.7. There can exist a case when the logger has not been set.

2020-07-18  Franz Holzinger  <franz@ttproducts.de>
    * new feature: The FileWriter Logger must store the previous SQL query. Because if an exception happens, then the SQL query by the exception will be written and the formerly interrupted SQL query would be lost.
    * new feature: expand the SQL queries also with question marks as placeholders
    * new feature: debugUtilityErrors only for the debugUtility class of TYPO3. Turning this off should help to avoid an output by TYPO3 which causes Ajax errors.

2020-07-11  Franz Holzinger  <franz@ttproducts.de>